[tool.poetry]
name = "open-source-insights-api"
version = "0.1.7"
license = "MIT"
description = "Library to consume project Open Source Insights Project from Google"
authors = ["Cristiano Henrique <cristianovisk@gmail.com>"]
readme = "README.md"
packages = [{include = "open_source_insights_api"}]
classifiers = [
    "Topic :: Internet",
    "Environment :: Console",
    "Natural Language :: Portuguese (Brazilian)",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.urls]
"Documentação" = "https://github.com/cristianovisk/open_source_insights_api/blob/main/README.md"
"Código" = "https://github.com/cristianovisk/open_source_insights_api"
"Bug Tracker" = "https://github.com/cristianovisk/open_source_insights_api/issues"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
