[tool.poetry]
name = "open-source-insights-api"
version = "0.1.16"
license = "MIT"
description = "Library to consume project Open Source Insights Project from Google"
authors = ["Cristiano Henrique <cristianovisk@gmail.com>"]
readme = "README.md"
packages = [{include = "open_source_insights_api"}]
classifiers = [
    "Topic :: Internet",
    "Environment :: Console",
    "Natural Language :: Portuguese (Brazilian)",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
]
[tool.poetry.scripts]
sbom_insights = "open_source_insights_api.cli:cli"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
rich = "^13.4.2"
httpx = "^0.25.0"
packageurl-python = "^0.11.2"
pandas = "^2.1.1"
openpyxl = "^3.1.2"

[tool.poetry.urls]
"Documentação" = "https://github.com/cristianovisk/open_source_insights_api/blob/main/README.md"
"Código" = "https://github.com/cristianovisk/open_source_insights_api"
"Bug Tracker" = "https://github.com/cristianovisk/open_source_insights_api/issues"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
